Closed
Bug 1193864
Opened 7 years ago
Closed 7 years ago
Fix dom/media/platforms/wmf/ compilation on mingw.
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla43
Tracking | Status | |
---|---|---|
firefox43 | --- | fixed |
People
(Reporter: jacek, Assigned: jacek)
Details
Attachments
(1 file)
3.79 KB,
patch
|
cpearce
:
review+
|
Details | Diff | Splinter Review |
I get an error: WMFDecoderModule.cpp:105:66: error: conversion from ‘mozilla::WMFVideoMFTManager*’ to non-scalar type ‘nsAutoPtr<mozilla::WMFVideoMFTManager>’ requested The patch also fixes warnings: - unused variables - sign-compare (HRESULT is signed; I changed argument type to unsigned so that there is an implicit cast when it's called)
Attachment #8647044 -
Flags: review?(cpearce)
Updated•7 years ago
|
Attachment #8647044 -
Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/06f4591f8142
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in
before you can comment on or make changes to this bug.
Description
•