Bug 1193864 - Fixed dom/media/platforms/wmf/ compilation on mingw. r=cpearce